# Database-Management-System

./: CMakeLists.txt  README.md
demo/: main.cpp
include/: db_driver.h  db_hybrid.h  db_individual_plan.h  db_overall_plan.h  individual_plan.h  interpreter.h  overall_plan.h  sorting.h  student.h
sources/: db_driver.cpp  db_hybrid.cpp  db_individual_plan.cpp  db_overall_plan.cpp  individual_plan.cpp  interpreter.cpp  overall_plan.cpp
